add run commands

--- a/apps/data-layer-service/project.json
+++ b/apps/data-layer-service/project.json
@@ -24,8 +24,7 @@
       "dependsOn": ["build"],
       "options": {
         "buildTarget": "data-layer-service:build",
-        "runBuildTargetDependencies": false,
-        "watch": true
+        "runBuildTargetDependencies": false
       },
       "configurations": {
         "development": {
