--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.15.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "typeorm": "^0.3.23"
+    "typeorm": "^0.3.23",
+    "ts-node": "10.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -51,7 +52,6 @@
     "nx": "21.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
