add migrations directory to Dockerfile

--- a/apps/data-layer-service/Dockerfile
+++ b/apps/data-layer-service/Dockerfile
@@ -22,6 +22,7 @@ RUN npm ci --only=production
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/apps/data-layer-service/src/assets ./apps/data-layer-service/src/assets
 COPY --from=builder /app/apps/data-layer-service/src/app/shared/config/data-source.config.ts ./apps/data-layer-service/src/app/shared/config/data-source.config.ts
+COPY --from=builder /app/apps/data-layer-service/src/migrations ./apps/data-layer-service/src/migrations
 
 COPY apps/data-layer-service/entrypoint.sh ./entrypoint.sh
 RUN chmod +x entrypoint.sh
