--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "migration:generate": "typeorm migration:create ./apps/data-layer-service/src/migrations/InitMigration",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d apps/data-layer-service/src/app/shared/config/data-source.config.ts",
-    "rent-api:build": "nx run rent-api:build",
+
     "rent-api:serve": "nx run rent-api:serve",
+    "rent-api:build": "nx run rent-api:build",
+
+    "data-layer-service:serve": "nx run data-layer-service:serve",
     "data-layer-service:build": "nx run data-layer-service:build"
   },
   "private": true,
