--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "scripts": {
     "migration:generate": "typeorm migration:create ./apps/data-layer-service/src/migrations/InitMigration",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d apps/data-layer-service/src/app/shared/config/data-source.config.ts",
-
     "rent-api:serve": "nx run rent-api:serve",
     "rent-api:build": "nx run rent-api:build",
-
     "data-layer-service:serve": "nx run data-layer-service:serve",
     "data-layer-service:build": "nx run data-layer-service:build"
   },
@@ -16,6 +14,7 @@
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "10.4.17",
     "@nestjs/platform-express": "^10.0.2",
@@ -28,8 +27,8 @@
     "pg": "^8.15.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "typeorm": "^0.3.23",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "typeorm": "^0.3.23"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
