--- a/apps/data-layer-service/project.json
+++ b/apps/data-layer-service/project.json
@@ -24,7 +24,8 @@
       "dependsOn": ["build"],
       "options": {
         "buildTarget": "data-layer-service:build",
-        "runBuildTargetDependencies": false
+        "runBuildTargetDependencies": false,
+        "inspect": false
       },
       "configurations": {
         "development": {
