--- a/apps/rent-api/project.json
+++ b/apps/rent-api/project.json
@@ -24,7 +24,8 @@
       "dependsOn": ["build"],
       "options": {
         "buildTarget": "rent-api:build",
-        "runBuildTargetDependencies": false
+        "runBuildTargetDependencies": false,
+        "inspect": false
       },
       "configurations": {
         "development": {
