--- a/package.json
+++ b/package.json
@@ -12,51 +12,96 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.8",
+    "@mui/material": "^7.3.4",
+    "@mui/styled-engine-sc": "^7.3.3",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "10.4.17",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
-    "axios": "^1.6.0",
+    "@tanstack/react-query": "^5.90.3",
+    "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ioredis": "^5.6.1",
+    "lucide-react": "^0.546.0",
     "nestjs-typeorm-paginate": "^4.1.0",
     "pg": "^8.15.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router": "^7.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
     "ts-node": "10.9.1",
-    "typeorm": "^0.3.23"
+    "typeorm": "^0.3.23",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/schematics": "11.0.9",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "21.0.3",
-    "@nx/eslint-plugin": "21.0.3",
-    "@nx/jest": "21.0.3",
-    "@nx/js": "21.0.3",
-    "@nx/nest": "21.0.3",
-    "@nx/node": "21.0.3",
-    "@nx/web": "21.0.3",
-    "@nx/webpack": "21.0.3",
-    "@nx/workspace": "21.0.3",
+    "@nx/devkit": "21.6.4",
+    "@nx/eslint": "^21.6.4",
+    "@nx/eslint-plugin": "21.6.4",
+    "@nx/jest": "21.6.4",
+    "@nx/js": "21.6.4",
+    "@nx/nest": "21.6.4",
+    "@nx/node": "21.6.4",
+    "@nx/playwright": "21.6.4",
+    "@nx/react": "^21.6.4",
+    "@nx/vite": "^21.6.4",
+    "@nx/web": "21.6.4",
+    "@nx/webpack": "21.6.4",
+    "@nx/workspace": "21.6.4",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
-    "@types/node": "~18.16.9",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.1.0",
+    "@types/jest": "30.0.0",
+    "@types/node": "20.19.9",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
-    "jest": "^29.7.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "jest": "30.0.5",
     "jest-environment-node": "^29.7.0",
-    "nx": "21.0.3",
+    "jest-util": "30.0.5",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
+    "nx": "21.6.4",
+    "postcss": "^8.5.6",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "sass": "^1.55.0",
+    "tailwindcss": "^4.1.15",
+    "ts-jest": "29.4.5",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.1",
+    "vite": "^7.0.0",
+    "vitest": "^3.0.0",
     "webpack-cli": "^5.1.4"
   }
 }
