add property image management features and update UI components

--- a/apps/data-layer-service/.env
+++ b/apps/data-layer-service/.env
@@ -6,3 +6,9 @@ DB_USER=user
 DB_PASSWORD=password
 DB_NAME=rent-db
 DB_RUN_MIGRATIONS=true
+
+S3_ENDPOINT=http://minio:9009
+S3_ACCESS_KEY=minio
+S3_SECRET_KEY=minio123
+S3_BUCKET=property-images
+S3_FORCE_PATH_STYLE=true
