--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "migration:generate": "typeorm migration:create ./apps/data-layer-service/src/migrations/InitMigration",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d apps/data-layer-service/src/app/shared/config/data-source.config.ts",
+    "migration:run": "ts-node --project apps/data-layer-service/tsconfig.app.json ./node_modules/typeorm/cli.js migration:run -d apps/data-layer-service/src/app/shared/config/data-source.config.ts",
     "rent-api:serve": "nx run rent-api:serve",
     "rent-api:build": "nx run rent-api:build",
     "data-layer-service:serve": "nx run data-layer-service:serve",
@@ -12,9 +12,11 @@
   },
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.919.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.8",
+    "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/styled-engine-sc": "^7.3.3",
     "@nestjs/axios": "^4.0.0",
@@ -29,12 +31,14 @@
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.546.0",
     "nestjs-typeorm-paginate": "^4.1.0",
     "pg": "^8.15.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-router": "^7.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -42,6 +46,7 @@
     "tailwind-merge": "^3.3.1",
     "ts-node": "10.9.1",
     "typeorm": "^0.3.23",
+    "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
